--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,15 +1,17 @@
 ---
 driver:
-  name: vagrant
+  name: docker
+driver_config:
+  require_chef_omnibus: true
+  use_sudo: false
 
 provisioner:
-  name: chef_solo
+  name: chef_zero
 
 platforms:
-  - name: ubuntu-12.04
+  - name: ubuntu-14.04
   - name: centos-6.4
 
 suites:
   - name: default
-    run_list:
-    attributes:
+    run_list: ['r_test::default']
