--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -10,8 +10,12 @@ provisioner:
 
 platforms:
   - name: ubuntu-14.04
+    run_list:
+      - recipe[apt]
   - name: centos-6.4
   - name: debian-7
+    run_list:
+      - recipe[apt]
 
 suites:
   - name: default
