--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,10 +12,18 @@ platforms:
   - name: ubuntu-14.04
     run_list:
       - recipe[apt]
-  - name: centos-6.4
+  - name: ubuntu-12.04
+    run_list:
+      - recipe[apt]
   - name: debian-7
     run_list:
       - recipe[apt]
+  - name: debian-8
+    run_list:
+      - recipe[apt]
+  - name: centos-6.4
+  - name: fedora-21
+
 
 suites:
   - name: default
